MacViews: Select all text on right clicking an unfocused text view.

When an unfocused Cocoa text view is right clicked, all its text is selected.
This CL implements this behavior on MacViews for views::Textfield and
views::Label. A new variable kSelectAllOnRightClickWhenUnfocused is introduced
to the PlatformStyle class to account for the platform specific differences.
SelectionController::OnMousePressed is also modified to take the initial focus
state of its client view as an argument. A test is also added to
textfield_unittest.cc.

BUG=676296

Review-Url: https://codereview.chromium.org/2650963002
Cr-Commit-Position: refs/heads/master@{#446588}

Former-commit-id: 81dc16e8871f33d24d0e12b0020491ee6ca18399